--- a/aruco_ros/package.xml
+++ b/aruco_ros/package.xml
@@ -20,6 +20,8 @@
   <depend>image_transport</depend>
   <depend>roscpp</depend>
   <depend>tf</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>aruco</depend>
   <depend>aruco_msgs</depend>
   <depend>visualization_msgs</depend>
